--- a/src/main/resources/templates/shop.html
+++ b/src/main/resources/templates/shop.html
@@ -17,7 +17,7 @@
             font-family: 'Montserrat', sans-serif;
         }
         body {
-            margin-left: 60px;
+            margin-left: 160px;
             margin-top: 50px;
             background-color: #c5cdfd;
             background: linear-gradient(to right, #e2e2e2, #c5cdfd);
@@ -47,6 +47,28 @@
             justify-content: center;
             align-items: center;
             padding: 20px 0; /* Отступ сверху и снизу кнопки */
+        }
+
+        .button-container-day {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 20px 0;
+        }
+
+        .button-container-day form button {
+            background-color: #ff5733; /* Измените цвет фона на желаемый */
+            color: #fff; /* Измените цвет текста на белый или другой по вашему выбору */
+            padding: 10px 20px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 16px; /* Измените размер шрифта на желаемый */
+            transition: background-color 0.3s;
+        }
+
+        .button-container-day form button:hover {
+            background-color: #e64827; /* Измените цвет фона при наведении на кнопку */
         }
 
         .card::before {
@@ -243,7 +265,184 @@
             transition-delay: 0.75s;
         }
 
+        .card-day {
+            position: relative;
+            width: 320px;
+            height: 450px;
+            background-color: #258ad5;
+            background: linear-gradient(to right, #2893e1, #0f6bab);
+            border-radius: 20px;
+            overflow: hidden;
+            box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.1);
+        }
 
+        .card-day::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: #309fde;
+            clip-path: circle(150px at 80% 20%);
+            transition: 0.5s ease-out;
+        }
+        .card-day:hover::before {
+            clip-path: circle(300px at 80% -20%);
+        }
+        .card-day::after {
+            content: 'ITech';
+            position: absolute;
+            top: 30%;
+            left: -10%;
+            font-size: 8em;
+            font-weight: 800;
+            font-style: italic;
+            color: rgb(32, 119, 183);
+        }
+        .card-day .imgBx-day {
+            position: absolute;
+            top: 35%;
+            transform: translateY(-50%);
+            z-index: 90;
+            width: 105%;
+            height: 230px;
+            transition: 0.5s;
+        }
+        .card-day:hover .imgBx-day {
+            top: 0;
+            transform: translateY(0) scale(0.8);
+        }
+        .card-day img {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-53%, -50%);
+            width: 270px;
+        }
+        .card-day .contentBx-day {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            height: 100px;
+            transition: 1s;
+            z-index: 10;
+        }
+        .card-day:hover .contentBx-day {
+            height: 210px;
+        }
+        .card-day .contentBx-day h2 {
+            position: relative;
+            font-weight: 600;
+            letter-spacing: 1px;
+            color: #ffffff;
+        }
+        .card-day .contentBx-day .size-day {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 8px 20px;
+            transition: 0.5s;
+            opacity: 0;
+            visibility: hidden;
+        }
+        .card-day:hover .contentBx-day .size-day {
+            opacity: 1;
+            visibility: visible;
+            transition-delay: 0.5s;
+        }
+        .card-day .contentBx-day .size-day h3 {
+            color: #ffffff;
+            font-weight: 300;
+            font-size: 17px;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            margin-right: 10px;
+        }
+
+        .card-day .contentBx-day .size-day h4 {
+            color: #dadada;
+            font-weight: 300;
+            font-size: 14px;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            margin-right: 10px;
+        }
+
+        .card-day .contentBx-day .prod_name-day {
+            display: flex;
+            align-items: center;
+            margin-left: 20px;
+        }
+
+        .card-day .contentBx-day .price-day {
+            display: flex;
+            align-items: center;
+            justify-content: flex-end; /* Move the price to the right */
+            margin-top: 10px; /* Add some top margin for spacing */
+            margin-right: 20px;
+        }
+
+        .card-day .contentBx-day .price-day h4 {
+            font-weight: 600;
+            font-size: 17px;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            color: #a0d1fd;
+            margin-right: 5px;
+        }
+
+        .card-day .contentBx-day .price-day h3 {
+            font-weight: 600;
+            font-size: 24px;
+            color: #a0d1fd;
+            margin: 0;
+        }
+
+        .card-day .contentBx-day .size-day h4 {
+            color: #dadada;
+            font-weight: 300;
+            font-size: 20px;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            margin-right: 10px;
+        }
+
+        .card-day .contentBx-day .size-day span {
+            width: 26px;
+            height: 26px;
+            text-align: center;
+            line-height: 26px;
+            font-size: 20px;
+            display: inline-block;
+            color: #c0f6eb;
+            background: #fff;
+            margin: 0 5px;
+            transition: 0.5s;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+        .card-day .contentBx-day .size-day span:hover {
+            background: #86D8CF;
+        }
+        .card-day .contentBx-day a {
+            display: inline-block;
+            padding: 10px 20px;
+            background: #fff;
+            border-radius: 4px;
+            margin-top: 10px;
+            text-decoration: none;
+            font-weight: 600;
+            color: #86D8CF;
+            opacity: 0;
+            transform: translateY(50px);
+            transition: 0.5s;
+        }
+        .card-day:hover .contentBx-day a {
+            opacity: 1;
+            transform: translateY(0);
+            transition-delay: 0.75s;
+        }
 
         label {
             font-weight: bold;
@@ -252,9 +451,23 @@
             margin-bottom: 5px;
         }
 
-        /* Общий контейнер для фильтров */
-        .filters {
+        .filters-and-product {
             float: right;
+            width: 450px;
+        }
+        .title-day {
+            margin-bottom: 10px;
+            margin-top: 30px;
+            margin-left: 7.5%;
+            color: #062a6f;
+        }
+
+        .product-of-the-day {
+            margin-top: 20px;
+            margin-left: 10%;
+        }
+
+        .filters {
             background-color: #258ad5;
             background: linear-gradient(to left, #258ad5, #0f6bab);
             padding: 15px;
@@ -308,6 +521,10 @@
             margin-top: 10px;
         }
 
+        .button-container-day {
+            margin-top: 10px;
+        }
+
         .button-container form button {
             background-color: #ff5733; /* Измените цвет фона на желаемый */
             color: #fff; /* Измените цвет текста на белый или другой по вашему выбору */
@@ -324,7 +541,7 @@
         }
 
         .reset-button {
-            background-color: #c54327; /* Цвет фона кнопки Reset */
+            background-color: #ff5733; /* Цвет фона кнопки Reset */
             color: #fff; /* Цвет текста кнопки Reset */
             padding: 10px 15px;
             border: none;
@@ -332,6 +549,9 @@
             cursor: pointer;
             font-size: 14px;
             margin-top: 20px;
+        }
+        .reset-button:hover {
+            background-color: #e64827; /* Измените цвет фона при наведении на кнопку */
         }
 
         /* Стили для поисковой кнопки */
@@ -538,7 +758,6 @@
 </head>
 <body>
 
-
 <div class="sidebar close">
     <div class="logo-details">
         <i class='bx bxl-java' ></i>
@@ -607,31 +826,60 @@
         </li>
     </ul>
 </div>
-
-<div class="filters">
-    <h2>Filters</h2>
-    <div class="search-bar">
-        <input type="text" id="searchInput" placeholder="Search by name..." />
-        <button onclick="searchProducts()">Search</button>
+<div class="filters-and-product">
+    <div class="filters">
+        <h2>Filters</h2>
+        <div class="search-bar">
+            <input type="text" id="searchInput" placeholder="Search by name..." />
+            <button onclick="searchProducts()">Search</button>
+        </div>
+        <form th:action="@{/shop/filter}" th:object="${filters}" method="get">
+            <label for="minPrice">Min Price:</label>
+            <input type="number" id="minPrice" th:field="*{minPrice}" />
+            <label for="maxPrice">Max Price:</label>
+            <input type="number" id="maxPrice" th:field="*{maxPrice}" />
+            <label for="category">Category:</label>
+            <select id="category" th:field="*{categoryId}">
+                <option th:value="0">All Categories</option>
+                <th:block th:each="category : ${categories}">
+                    <option th:value="${category.id}" th:text="${category.name}"></option>
+                </th:block>
+            </select>
+            <input type="submit" value="Apply Filters" />
+        </form>
+        <form th:action="@{/shop}" method="get">
+            <button type="submit" class="reset-button">Reset</button>
+        </form>
     </div>
-    <form th:action="@{/shop/filter}" th:object="${filters}" method="get">
-        <label for="minPrice">Min Price:</label>
-        <input type="number" id="minPrice" th:field="*{minPrice}" />
-        <label for="maxPrice">Max Price:</label>
-        <input type="number" id="maxPrice" th:field="*{maxPrice}" />
-        <label for="category">Category:</label>
-        <select id="category" th:field="*{categoryId}">
-            <option th:value="0">All Categories</option>
-            <th:block th:each="category : ${categories}">
-                <option th:value="${category.id}" th:text="${category.name}"></option>
-            </th:block>
-        </select>
-        <input type="submit" value="Apply Filters" />
-    </form>
-    <form th:action="@{/shop}" method="get">
-        <button type="submit" class="reset-button">Reset</button>
-    </form>
+
+    <div class="product-of-the-day">
+        <h2 class="title-day">Bestseller of the Day</h2>
+        <div class="card-day">
+            <div class="imgBx-day">
+                <img class="product-image" th:src="@{${'/images/' + productDay.imageName}}" th:alt="${productDay.name}" />
+            </div>
+            <div class="contentBx-day">
+                <div class="prod_name-day">
+                    <h2 th:text="${productDay.name}"></h2>
+                </div>
+                <div class="price-day">
+                    <h4>$</h4>
+                    <h3 th:text="${productDay.price}"></h3>
+                </div>
+                <div class="size-day">
+                    <h4>Price Opt:</h4>
+                    <h4 th:text="${productDay.priceOpt}"></h4>
+                    <div class="button-container-day">
+                        <form th:action="@{'/shop/viewproduct/' + ${productDay.id}}" method="get">
+                            <button type="submit">View Product</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+
 <div class="container">
     <div class="card" th:each="product : ${products}">
         <div class="imgBx">
